# pypackage-template

./: CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: builds.yml  setup-repository.yml  style.yml  tests.yml
{{cookiecutter.package_name}}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.package_name}}/.github/: PULL_REQUEST_TEMPLATE.md  collect_env.py  labeler.yml  validate_headers.py
{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
{{cookiecutter.package_name}}/.github/workflows/: builds.yml  release.yml  style.yml  tests.yml
{{cookiecutter.package_name}}/docs/source/: changelog.rst  conf.py  index.rst  installing.rst
{{cookiecutter.package_name}}/docs/source/_static/js/: custom.js
{{cookiecutter.package_name}}/tests/: test_version.py
