[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
readme = "README.md"
requires-python = ">=3.6,<4"
license = {file = "LICENSE"}
keywords = ["python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
]
quality = [
    "flake8>=3.9.0",
    "isort>=5.7.0",
    "mypy>=0.812",
    "pydocstyle[toml]>=6.0.0",
    "black>=22.1,<23.0",
    "autoflake>=1.5.0,<2.0.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "pre-commit>=2.17.0,<3.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    "recommonmark>=0.7.1",
    "sphinx-markdown-tables>=0.0.15",
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    "furo>=2022.3.4",
]
dev = [
    # test
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
    # style
    "flake8>=3.9.0",
    "isort>=5.7.0",
    "mypy>=0.812",
    "pydocstyle[toml]>=6.0.0",
    "black>=22.1,<23.0",
    "autoflake>=1.5.0,<2.0.0",
    "bandit[toml]>=1.7.0,<1.8.0",
    "pre-commit>=2.17.0,<3.0.0",
    # docs
    "sphinx<=3.4.3",
    "sphinx-rtd-theme==0.4.3",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    "recommonmark>=0.7.1",
    "sphinx-markdown-tables>=0.0.15",
    "Jinja2<3.1",
]

[project.urls]
documentation = "https://{{cookiecutter.gh_user}}.github.io/{{cookiecutter.repo_name}}"
repository = "https://github.com/{{cookiecutter.gh_user}}/{{cookiecutter.repo_name}}"
tracker = "https://github.com/{{cookiecutter.gh_user}}/{{cookiecutter.repo_name}}/issues"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]


[tool.mypy]
files = "{{cookiecutter.package_name}}/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.isort]
line_length = 120
src_paths = ["{{cookiecutter.package_name}}", "tests", "docs"]
skip_glob = "**/__init__.py"
known_third_party = []

[tool.pydocstyle]
select = "D300,D301,D417"
match = ".*\\.py"

[tool.coverage.run]
source = ["{{cookiecutter.package_name}}"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.bandit]
exclude_dirs = [".github/collect_env.py"]
skips = ["B101"]
